--- a/index.html
+++ b/index.html
@@ -2,33 +2,89 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>ășț pls</title>
 
 		<style>
 			body {
-				font-size: 6em;
 				text-align: center;
-				padding: 1em;
-				background: #f0f0f0;
+				padding: 2em;
+				/*background: #f0f0f0;*/
 				color: #333;
+				font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+				line-height: 1.4;
+			}
+
+			table {
+				font-size: 3em;
+				display: inline-block;
+				border-collapse: collapse;
+				border: 0.1em solid #333;
+				background: #fff;
+				font-weight: 300;
+				margin: 0.5em 0;
+			}
+
+			th {
+				border-bottom: 0.1em solid #333;
+				font-weight: inherit;
+			}
+
+
+			th, td {
+				padding: 0.1em 0.5em;
+			}
+
+			tr :first-child {
+				border-right: 0.1em solid #333;
+			}
+
+			a {
+				color: inherit;
+			}
+
+			.da {
+				color: #2ECC71;
+			}
+
+			.nu {
+				color: #E74C3C;
+			}
+
+			h1, p {
+				font-weight: 400;
+				margin: 0;
 			}
 
 			ul {
-				margin: 0;
-				padding: 0;
 				list-style: none;
-			}
-
-			ins {
-				text-decoration: none;
+				padding: 0;
+				margin: 1em 0;
 			}
 		</style>
 	</head>
 	<body>
+
+		<h1>Așadar</h1>
+		<table>
+			<tr><th class='nu'>✗</th><th class='da'>✓</th></tr>
+			<tr><td>Ãã</td><td>Ăă</td></tr>
+			<tr><td>Şş</td><td>Șș</td></tr>
+			<tr><td>Ţţ</td><td>Țț</td></tr>
+		</table>
+		<p>Citește:</p>
 		<ul>
-			<li><del>Ãã</del> &rarr; <ins>Ăă</ins></li>
-			<li><del>Şş</del> &rarr; <ins>Șș</ins></li>
-			<li><del>Ţţ</del> &rarr; <ins>Țț</ins></li>
+			<li><a href='http://en.wikipedia.org/wiki/Romanian_alphabet' title='Romanian alphabet'>Romanian alphabet</a> &mdash; Wikipedia</li>
+			<li><a href='http://kitblog.com/2008/10/romanian_diacritic_marks.html' target='_blank' title='Romanian Diacritic Marks'>Romanian Diacritic Marks</a> &mdash; Cristian Kit Paul</li>
+			<li><a href="http://www.decatorevista.ro/diacritice/">Căciuliță, coif, virguliță</a> &mdash; Lavinia Gliga, Decât o Revistă</li>
 		</ul>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-58301478-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
 	</body>
 </html>
