Added hero image for FB

--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>ășț pls</title>	
+		<title>ășț pls: foarte mic îndreptar de tipografie pentru limba română</title>	
+
+		<meta property="og:image" content="http://astpls.ro/screenshot.png" />
+		<meta property="og:title" content="ășț pls" />
+		<meta property="og:description" content="foarte mic îndreptar de tipografie pentru limba română" />
+		<meta name="twitter:image" content="http://astpls.ro/screenshot.png" />
 	</head>
 	<body>
 
 		<header>
-			<h1><strong>ășț pls</strong>: foarte mic îndreptar de tipografie în limba română</h1>
+			<h1><strong>ășț pls</strong>: foarte mic îndreptar de tipografie pentru limba română</h1>
 		</header>
 
 
 		<article>
 			<div class='corect-gresit'>
 				<p>
-					<span class='corect'>Ăă</span> <em>cu căciulă</em>
-					<span class='gresit'>Ãã</span> <em>cu tilda</em>
-					<span class='gresit'>Ǎǎ</span> <em>cu caron</em>
+					<span class='bucata'><span class='corect'>Ăă</span> <em>cu căciulă</em></span>
+					<span class='bucata'><span class='gresit'>Ãã</span> <em>cu tilda</em></span>
+					<span class='bucata'><span class='gresit'>Ǎǎ</span> <em>cu caron</em></span>
 				</p>
 				<p>
-					<span class='corect'>Șș</span> <em>cu virgulă</em>
-					<span class='corect'>Țț</span> <em>cu virgulă</em>
-					<span class='gresit'>Şş</span> <em>cu sedilă</em>
-					<span class='gresit'>Ţţ</span> <em>cu sedilă</em>
+					<span class='bucata'><span class='corect'>Șș</span> <em>cu virgulă</em></span>
+					<span class='bucata'><span class='corect'>Țț</span> <em>cu virgulă</em></span>
+					<span class='bucata'><span class='gresit'>Şş</span> <em>cu sedilă</em></span>
+					<span class='bucata'><span class='gresit'>Ţţ</span> <em>cu sedilă</em></span>
 				</p>
 				<p>
-					<span class='corect'>„ ”</span> <em>99 jos, 99 sus</em>
-					<span class='gresit'>„ “</span> <em>99 jos, 66 sus</em>
-					<span class='gresit'>“ ”</span> <em>66 sus, 99 sus</em>
-					<span class='gresit'>" "</span> <em>în niciun caz</em>
+					<span class='bucata'><span class='corect'>„ ”</span> <em>99 jos, 99 sus</em></span>
+					<span class='bucata'><span class='gresit'>„ “</span> <em>99 jos, 66 sus</em></span>
+					<span class='bucata'><span class='gresit'>“ ”</span> <em>66 sus, 99 sus</em></span>
+					<span class='bucata'><span class='gresit'>" "</span> <em>în niciun caz</em></span>
 				</p>
 			</div>
 
