--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			<div class='corect-gresit'>
 				<p>
-					<span class='bucata'><span class='corect'>Ăă</span> <em>cu căciulă</em></span>
+					<span class='bucata'><span class='corect'>Ăă</span> <em>cu breve</em></span>
 					<span class='bucata'><span class='gresit'>Ãã</span> <em>cu tilda</em></span>
 					<span class='bucata'><span class='gresit'>Ǎǎ</span> <em>cu caron</em></span>
 				</p>
@@ -76,7 +76,18 @@
 					<span class='bucata'><span class='corect'>„<span class='hellip'>…</span>”</span> <em>99 jos, 99 sus</em></span>
 					<span class='bucata'><span class='gresit'>„<span class='hellip'>…</span>“</span> <em>99 jos, 66 sus</em></span>
 					<span class='bucata'><span class='gresit'>“<span class='hellip'>…</span>”</span> <em>66 sus, 99 sus</em></span>
-					<span class='bucata'><span class='gresit'>"<span class='hellip'>…</span>"</span> <em>în niciun caz</em></span>
+					<span class='bucata'><span class='gresit'>"<span class='hellip'>…</span>"</span> <em>ghilimele drepte</em></span>
+				</p>
+
+				<p>
+					<span class='bucata'><span class='corect'>„«<span class='hellip'>…</span>»”</span> <em>ghilimele franțuzești</em></span>
+				</p>
+
+				<p>
+					<span class='bucata'><span class='corect'>’</span> <em>apostrof</em></span>
+					<span class='bucata'><span class='gresit'>'</span> <em>apostrof drept</em></span>
+					<span class='bucata'><span class='gresit'>′</span> <em>prim</em></span>
+
 				</p>
 			</div>
 
