--- a/en/index.html
+++ b/en/index.html
@@ -44,6 +44,16 @@
 			gap: 1px;
 		}
 
+		@media (max-width: 30em) {
+			.char-entry	{
+				display: block;
+			}
+
+			.char-entry > * {
+				margin-bottom: 1px;
+			}
+		}
+
 		.char-group {
 			border: 1px solid rgb(0 0 0 / 0.3);
 			display: flex;
