--- a/src/ro/index.html
+++ b/src/ro/index.html
@@ -1,68 +1,323 @@
 <h2>Caracterele corecte</h2>
 
-<div class="corect-gresit">
-	<p>
-		<span class="bucata"
-			><span class="corect">Ăă</span> <em>cu breve</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">Ãã</span> <em>cu tilda</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">Ǎǎ</span> <em>cu caron</em></span
-		>
-	</p>
-	<p>
-		<span class="bucata"
-			><span class="corect">Șș</span> <em>cu virgulă</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">Şş</span> <em>cu sedilă</em></span
-		>
-	</p>
-	<p>
-		<span class="bucata"
-			><span class="corect">Țț</span> <em>cu virgulă</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">Ţţ</span> <em>cu sedilă</em></span
-		>
-	</p>
-	<p>
-		<span class="bucata"
-			><span class="corect">„<span class="hellip">…</span>”</span>
-			<em>99 jos, 99 sus</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">„<span class="hellip">…</span>“</span>
-			<em>99 jos, 66 sus</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">“<span class="hellip">…</span>”</span>
-			<em>66 sus, 99 sus</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">"<span class="hellip">…</span>"</span>
-			<em>ghilimele drepte</em></span
-		>
-	</p>
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ă</div>
+				<div>
+					<code
+						><strong>U+0102</strong> LATIN CAPITAL LETTER A WITH
+						BREVE</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ă</div>
+				<div>
+					<code
+						><strong>U+0103</strong> LATIN SMALL LETTER A WITH
+						BREVE</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu breve ✓</div>
+	</div>
 
-	<p>
-		<span class="bucata"
-			><span class="corect">„«<span class="hellip">…</span>»”</span>
-			<em>ghilimele franțuzești</em></span
-		>
-	</p>
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ã</div>
+				<div>
+					<code
+						><strong>U+00C3</strong> LATIN CAPITAL LETTER A WITH
+						TILDE</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ã</div>
+				<div>
+					<code
+						><strong>U+00E3</strong> LATIN SMALL LETTER A WITH
+						TILDE</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu tildă ×</div>
+	</div>
 
-	<p>
-		<span class="bucata"
-			><span class="corect">’</span> <em>apostrof</em></span
-		>
-		<span class="bucata"
-			><span class="gresit">'</span> <em>apostrof drept</em></span
-		>
-		<span class="bucata"><span class="gresit">′</span> <em>prim</em></span>
-	</p>
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ǎ</div>
+				<div>
+					<code
+						><strong>U+01CD</strong> LATIN CAPITAL LETTER A WITH
+						CARON</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ǎ</div>
+				<div>
+					<code
+						><strong>U+01CE</strong> LATIN SMALL LETTER A WITH
+						CARON</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu caron ×</div>
+	</div>
+</div>
+
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ș</div>
+				<div>
+					<code
+						><strong>U+0218</strong> LATIN CAPITAL LETTER S WITH
+						COMMA BELOW</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ș</div>
+				<div>
+					<code
+						><strong>U+0219</strong> LATIN SMALL LETTER S WITH COMMA
+						BELOW</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu virgulă ✓</div>
+	</div>
+
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ş</div>
+				<div>
+					<code
+						><strong>U+015E</strong> LATIN CAPITAL LETTER S WITH
+						CEDILLA</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ş</div>
+				<div>
+					<code
+						><strong>U+015F</strong> LATIN SMALL LETTER S WITH
+						CEDILLA</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu sedilă ×</div>
+	</div>
+</div>
+
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ț</div>
+				<div>
+					<code
+						><strong>U+021A</strong> LATIN CAPITAL LETTER T WITH
+						COMMA BELOW</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ț</div>
+				<div>
+					<code
+						><strong>U+021B</strong> LATIN SMALL LETTER T WITH COMMA
+						BELOW</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu virgulă ✓</div>
+	</div>
+
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">Ţ</div>
+				<div>
+					<code
+						><strong>U+0103</strong> LATIN CAPITAL LETTER A WITH
+						BREVE</code
+					>
+				</div>
+			</div>
+			<div class="char">
+				<div class="char-sample">ţ</div>
+				<div>
+					<code
+						><strong>U+0103</strong> LATIN SMALL LETTER A WITH
+						BREVE</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">cu sedilă ×</div>
+	</div>
+</div>
+
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample"><span class="dim">abc</span>’</div>
+				<div>
+					<code
+						><strong>U+2019</strong> RIGHT SINGLE QUOTATION
+						MARK</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">apostrof ✓</div>
+	</div>
+
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample"><span class="dim">abc</span>'</div>
+				<div>
+					<code><strong>U+0027</strong> APOSTROPHE</code>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">apostrof drept ×</div>
+	</div>
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample"><span class="dim">abc</span>′</div>
+				<div>
+					<code><strong>U+2032</strong> PRIME</code>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">prim ×</div>
+	</div>
+</div>
+
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">„<span class="dim">abc</span>”</div>
+				<div>
+					<code
+						><strong>U+201E</strong> DOUBLE LOW-9 QUOTATION
+						MARK</code
+					>
+				</div>
+				<div>
+					<code
+						><strong>U+201D</strong> RIGHT DOUBLE QUOTATION
+						MARK</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">99 jos, 99 sus ✓</div>
+	</div>
+
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">„<span class="dim">abc</span>“</div>
+				<div>
+					<code
+						><strong>U+201E</strong> DOUBLE LOW-9 QUOTATION
+						MARK</code
+					>
+				</div>
+				<div>
+					<code
+						><strong>U+201C</strong> LEFT DOUBLE QUOTATION
+						MARK</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">99 jos, 66 sus ×</div>
+	</div>
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">“<span class="dim">abc</span>”</div>
+				<div>
+					<code
+						><strong>U+201C</strong> LEFT DOUBLE QUOTATION
+						MARK</code
+					>
+				</div>
+				<div>
+					<code
+						><strong>U+201D</strong> RIGHT DOUBLE QUOTATION
+						MARK</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">66 sus, 99 sus ×</div>
+	</div>
+	<div class="char-group char-group--incorrect">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">"<span class="dim">abc</span>"</div>
+				<div>
+					<code><strong>U+0022</strong> QUOTATION MARK</code>
+				</div>
+				<div>
+					<code><strong>U+0022</strong> QUOTATION MARK</code>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">ghilimele drepte ×</div>
+	</div>
+</div>
+
+<div class="char-entry">
+	<div class="char-group char-group--correct">
+		<div class="char-set">
+			<div class="char">
+				<div class="char-sample">
+					<span class="dim">„<span class="dim">abc</span></span
+					>«<span class="dim">abc</span>»<span class="dim"
+						><span class="dim">abc</span>”</span
+					>
+				</div>
+				<div>
+					<code
+						><strong>U+00AB</strong> LEFT-POINTING DOUBLE ANGLE
+						QUOTATION MARK</code
+					>
+				</div>
+				<div>
+					<code
+						><strong>U+00BB</strong> RIGHT-POINTING DOUBLE ANGLE
+						QUOTATION MARK</code
+					>
+				</div>
+			</div>
+		</div>
+		<div class="char-set-caption">ghilimele franțuzești ✓</div>
+	</div>
 </div>
 
 <h2>Pentru designerii de tipuri</h2>
