--- a/en/index.html
+++ b/en/index.html
@@ -11,24 +11,24 @@
 			margin: 0;
 			padding: 1em;
 			background: #fef4ee;
+			letter-spacing: 1.4;
 		}
 
-
-		.bucata {
-			white-space: nowrap;
-		}
-
-		.fraza {
-			font-size: 3em;
-		}
-
-		.hellip {
-			color: #999;
+		h1, h2, h3, h4 {
+			font-family: sans-serif;
+			font-size: 1em;
 		}
 
 		.logo {
 			width: 4em;
 			height: auto;
+		}
+
+		header {
+			display: flex;
+			align-items: center;
+			gap: 1rem;
+			padding: 1rem 0;
 		}
 
 		code {
@@ -82,19 +82,19 @@
 
 		.char-set-caption {
 			text-align: center;
-			padding: 1rem;
+			padding: 0.5rem;
 			background: rgb(0 0 0 / 0.1);
 			border-top: 1px solid rgb(0 0 0 / 0.3);
 		}
 
 		.char {
 			padding: 1rem;
+			text-align: center;
 		}
 
 		.char-sample {
 			font-size: 4em;
 			padding: 0.5rem;
-			text-align: center;
 		}
 
 		.dim {
