--- a/en/index.html
+++ b/en/index.html
@@ -19,6 +19,11 @@
 			font-size: 1em;
 		}
 
+		a {
+			color: inherit;
+			text-underline-offset: 0.15em;
+		}
+
 		.logo {
 			width: 4em;
 			height: auto;
@@ -27,7 +32,7 @@
 		header {
 			display: flex;
 			align-items: center;
-			gap: 1rem;
+			gap: 2rem 1rem;
 			padding: 1rem 0;
 		}
 
