--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
 		<div class="char-set">
 			<div class="char">
 				<div class="char-sample">
-					<span class="dim">„<span class="dim">abc</span></span
-					>«<span class="dim">abc</span>»<span class="dim"
-						><span class="dim">abc</span>”</span
+					<span class="dim">„<span class="dim">a</span></span
+					>«<span class="dim">b</span>»<span class="dim"
+						><span class="dim">c</span>”</span
 					>
 				</div>
 				<div>
