--- a/en/index.html
+++ b/en/index.html
@@ -414,7 +414,7 @@
 			</div>
 		
 		</div>
-		<div class='char-set-caption'>not plain single quote</div>
+		<div class='char-set-caption'>not plain apostrophe</div>
 	</div>
 	
 	<div class='
