--- a/en/index.html
+++ b/en/index.html
@@ -529,7 +529,7 @@
 			</div>
 		
 		</div>
-		<div class='char-set-caption'>not plain double quotes</div>
+		<div class='char-set-caption'>not plain quotes</div>
 	</div>
 	
 </div>
