--- a/en/index.html
+++ b/en/index.html
@@ -53,11 +53,15 @@
 			font-family: sans-serif;
 		}
 
-		header ul {
+		header h1 {
+			margin-right: auto;
+		}
+
+		.lang-switcher {
 			display: flex;
 			flex-wrap: wrap;
 			margin: 0;
-			gap: 0 1rem;
+			gap: 0 0.5rem;
 		}
 
 		code {
